force-app/main/default/objects/SalesOfficeProgram__c/SalesOfficeProgram__c.object-meta.xml
<CustomObject>
    <description>This object stores the address of various Sales offices over globe</description>
    <!-- <externalSharingModel>ReadWrite</externalSharingModel> -->
    <label>Sales Office / Program</label>
    <nameField>
        <label>Sales Office / Program</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesOffices/Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>