force-app/main/default/objects/SalesOfficeProgram__c/fields/AlternativeOfficeName__c.field-meta.xml
<CustomField>
    <fullName>AlternativeOfficeName__c</fullName>
    <description>Stores the alternate office name</description>
    <label>Alternative Office Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>