force-app/main/default/objects/SalesOfficeProgram__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Used to store the city of Sales office</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>