force-app/main/default/objects/SalesOfficeProgram__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Used to store the country of sales office</description>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>