force-app/main/default/objects/SalesOfficeProgram__c/fields/GeneralMobileNumber__c.field-meta.xml
<CustomField>
    <fullName>GeneralMobileNumber__c</fullName>
    <description>Used to store the 'General Mobile Number' of sales office</description>
    <label>General Mobile Number</label>
    <type>Phone</type>
</CustomField>