force-app/main/default/objects/SalesOfficeProgram__c/fields/GeneralNumber__c.field-meta.xml
<CustomField>
    <fullName>GeneralNumber__c</fullName>
    <description>Used to store the General Number of Sales Office</description>
    <label>General Number</label>
    <type>Phone</type>
</CustomField>