force-app/main/default/objects/SalesOfficeProgram__c/fields/GeneralNumberExtension__c.field-meta.xml
<CustomField>
    <fullName>GeneralNumberExtension__c</fullName>
    <description>Used to store the General Number Extension of Salesoffice</description>
    <label>General Number Extension</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>