force-app/main/default/objects/SalesOfficeProgram__c/fields/GeneralOfficeEmail__c.field-meta.xml
<CustomField>
    <fullName>GeneralOfficeEmail__c</fullName>
    <description>Used to store the 'General Office Email' of sales office</description>
    <label>General Office Email</label>
    <type>Email</type>
</CustomField>