force-app/main/default/objects/SalesOfficeProgram__c/fields/GeneralTollFreeNumber__c.field-meta.xml
<CustomField>
    <fullName>GeneralTollFreeNumber__c</fullName>
    <description>Used to store the 'General Toll Free Number' of salesofffice</description>
    <label>General Toll Free Number</label>
    <type>Phone</type>
</CustomField>