force-app/main/default/objects/SalesOfficeProgram__c/fields/GoogelMapLink__c.field-meta.xml
<CustomField>
    <fullName>GoogelMapLink__c</fullName>
    <description>Used to store the GoogleMapLink of sales office</description>
    <label>GoogelMapLink</label>
    <type>Url</type>
</CustomField>