force-app/main/default/objects/SalesOfficeProgram__c/fields/InternationalPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>InternationalPhoneNumber__c</fullName>
    <description>Used to store the 'International Phone Number' of Sales office</description>
    <label>International Phone Number</label>
    <type>Phone</type>
</CustomField>