force-app/main/default/objects/SalesOfficeProgram__c/fields/OfficeGeolocation__c.field-meta.xml
<CustomField>
    <fullName>OfficeGeolocation__c</fullName>
    <description>Used to store the Geolocation of sales office</description>
    <label>Office Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>