force-app/main/default/objects/SalesOfficeProgram__c/fields/OpeningTimes__c.field-meta.xml
<CustomField>
    <fullName>OpeningTimes__c</fullName>
    <description>Used to store the 'Opening Times' of sales office</description>
    <label>Opening Times</label>
    <length>100</length>
    <type>Text</type>
</CustomField>