force-app/main/default/objects/SalesOfficeProgram__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>Used to store the postal code of sales office</description>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>