force-app/main/default/objects/SalesOfficeProgram__c/fields/PrimarySocialMediaNumber__c.field-meta.xml
<CustomField>
    <fullName>PrimarySocialMediaNumber__c</fullName>
    <description>used to store the 'Primary Social Media Number [Social Media Number]' of sales office</description>
    <label>Primary Social Media Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>