force-app/main/default/objects/SalesOfficeProgram__c/fields/PrimarySocialMediaSocialMedia__c.field-meta.xml
<CustomField>
    <fullName>PrimarySocialMediaSocialMedia__c</fullName>
    <description>Used to store the 'Primary Social Media' of sales office</description>
    <label>Primary Social Media [Social Media]</label>
    <length>100</length>
    <type>Text</type>
</CustomField>