force-app/main/default/objects/SalesOfficeProgram__c/fields/SaleOfficeCode__c.field-meta.xml
<CustomField>
    <fullName>SaleOfficeCode__c</fullName>
    <description>Used to store the Sales office code of the region</description>
    <label>Sale Office Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesOffice</valueSetName>
    </valueSet>
</CustomField>