force-app/main/default/objects/SalesOfficeProgram__c/fields/SecondarySocialMedia__c.field-meta.xml
<CustomField>
    <fullName>SecondarySocialMedia__c</fullName>
    <description>Used to store the 'Secondary Social Media' of sales office</description>
    <label>Secondary Social Media</label>
    <length>100</length>
    <type>Text</type>
</CustomField>