force-app/main/default/objects/SalesOfficeProgram__c/fields/SecondarySocialMediaNumber__c.field-meta.xml
<CustomField>
    <fullName>SecondarySocialMediaNumber__c</fullName>
    <description>Used to store the 'Secondary Social Media Number' of sales office</description>
    <label>Secondary Social Media Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>