force-app/main/default/objects/SalesOfficeProgram__c/fields/SkypeId__c.field-meta.xml
<CustomField>
    <fullName>SkypeId__c</fullName>
    <description>Used to store the 'Skype Id' of sales office</description>
    <label>Skype Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>