force-app/main/default/objects/SalesOfficeProgram__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Used to store the State of sales office</description>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>