force-app/main/default/objects/SalesOfficeProgram__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Used to store the Street of sales office</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>